minor changes to css and attempts to fix heroku connection issue

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
 
 {{!-- <img src="####" alt="Cartoon picture of a burger."> --}}
 
-<h1 class="main-header">Eat-dat-burger</h1>
+<h1 class="main-header">Eat-da-burger</h1>
 {{!-- <img src="./assets/images/dinerTriangle.png" alt="diner polygon" class="header-polygon"> --}}
 
 
